fix: FAQ UI & Crousel not showing in mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ p {
 
 .accordion-item {
   background-color: #333333 !important;
-  border: 1px solid #9e9e9e;
+  border: 1px solid #eeeeee;
 }
 .accordion-button {
   background-color: #333333 !important;
@@ -34,9 +34,13 @@ p {
 }
 
 .accordion-button,
+a{
+  color: #eeeeee !important;
+  text-decoration: none;
+}
 .accordion-button:not(.collapsed),
 a {
-  color: #32bcad;
+  color: #32bcad !important;
   text-decoration: none;
 }
 
@@ -330,7 +334,7 @@ h6 {
   bottom: 15px;
   left: 15px;
   padding: 10px 0;
-  background-color: #fff;
+  background-color: #eeeeee;
   overflow-y: auto;
   transition: 0.3s;
 }
@@ -357,7 +361,7 @@ h6 {
   z-index: 99;
   opacity: 1;
   visibility: visible;
-  background: #fff;
+  background: #eeeeee;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
 }
 .navbar-mobile .dropdown ul li {
@@ -463,6 +467,7 @@ h6 {
 @media (max-width: 992px) {
   #hero {
     height: auto;
+    padding: 120px 0px 0px 0px;
   }
   #hero h1 {
     font-size: 28px;
@@ -716,11 +721,6 @@ h3 {
   max-width: 100%;
   transition: all 0.4s ease-in-out;
   display: inline-block;
-}
-@media (max-width: 768px) {
-  .clients img {
-    max-width: 40%;
-  }
 }
 
 /*--------------------------------------------------------------
@@ -1797,4 +1797,8 @@ h3 {
 
 .accordion-button::after {
   font-weight: bold !important;
+}
+
+.accordion-button::after {
+  background-image: url(../img/down-arrow.svg) !important;
 }
